--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -730,7 +730,416 @@ $list: $grey 92%, $white 8%;
 }
 
 /*******************************  UI Kit Fonts  **************************/
-//for announcement bar
+@mixin h1_30px_lora_charcoal{
+  font-family: $font-Lora;
+  font-size: 30px;
+  color: $charcoal19;
+  font-style: italic;
+}
+
+@mixin h2_24px_lora_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 24px;
+  color: $charcoal19;
+}
+
+@mixin h2_24px_lora_white{
+  font-family: $font-Montserrat;
+  font-size: 24px;
+  color: $white;
+}
+
+@mixin h3_20px_lora_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 20px;
+  color: $charcoal19;
+}
+
+@mixin h3_20px_lora_white{
+  font-family: $font-Montserrat;
+  font-size: 20px;
+  color: $white;
+}
+
+@mixin h3_20px_lora_gold{
+  font-family: $font-Montserrat;
+  font-size: 20px;
+  color: $gold;
+}
+
+@mixin h4_20px_montserrat_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 20px;
+  color: $charcoal19;
+  font-weight: $regular;
+}
+
+@mixin h4_20px_montserrat_gold{
+  font-family: $font-Montserrat;
+  font-size: 20px;
+  color: $gold;
+  font-weight: $regular;
+}
+
+@mixin h6_16px_lora_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 16px;
+  color: $charcoal19;
+}
+
+@mixin h6_16px_lora_white{
+  font-family: $font-Montserrat;
+  font-size: 16px;
+  color: $white;
+}
+
+@mixin b1_16px_charcoal{
+  font-family: $font-Lora;
+  font-size: 16px;
+  font-style: normal;
+  color: $charcoal19;
+}
+
+@mixin b1_16px_aqua{
+  font-family: $font-Montserrat;
+  font-size: 16px;
+  font-weight: $regular;
+  color: $aqua-bold;
+}
+
+@mixin b2_14px_charcoal_lora{
+  font-family: $font-Lora;
+  font-size: 14px;
+  font-style: normal;
+  color: $charcoal19;
+}
+
+@mixin b3_14px_montserrat_light_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $light;
+  color: $charcoal19;
+}
+
+@mixin b3_14px_montserrat_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  color: $charcoal19;
+}
+
+@mixin b3_14px_montserrat_white{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  color: $white;
+}
+
+@mixin b3_14px_montserrat_gold{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  color: $gold;
+}
+
+@mixin b3_14px_montserrat_aqua{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  color: $aqua-text;
+}
+
+@mixin b3_14px_montserrat_medium_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $medium;
+  color: $charcoal19;
+}
+
+@mixin b3_14px_montserrat_bold_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $bold;
+  color: $charcoal19;
+}
+
+@mixin b3_14px_montserrat_caps_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  text-transform: uppercase;
+  color: $charcoal19;
+}
+
+@mixin b3_14px_caps_white{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  text-transform: uppercase;
+  color: $white
+}
+
+@mixin b3_14px_caps_gold{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  text-transform: uppercase;
+  color: $gold
+}
+
+@mixin b3_14px_caps_aqua{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  text-transform: uppercase;
+  color: #3C7979;
+}
+
+@mixin b4_12px_montserrat_light_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $light;
+  color: $charcoal19;
+}
+
+@mixin b4_12px_montserrat_light_white{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $light;
+  color: $white;
+}
+
+@mixin b4_12px_montserrat_light_gold{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $light;
+  color: $gold;
+}
+
+@mixin b4_12px_montserrat_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $charcoal19;
+}
+
+@mixin b4_12px_montserrat_white{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $white;
+}
+
+@mixin b4_12px_montserrat_gold{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $gold;
+}
+
+@mixin b4_12px_montserrat_aqua{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $aqua-text;
+}
+
+@mixin b4_12px_montserrat_semibold_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $semibold;
+  color: $charcoal19;
+}
+
+@mixin b4_12px_charcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $charcoal19;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_montserrat_gold_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $gold;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_montserrat_aqua_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $aqua-text;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_medium_charcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $charcoal19;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_medium_white{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $white;
+}
+
+@mixin b4_12px_medium_white_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $white;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_medium_light_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $light-charcoal;
+}
+
+@mixin b4_12px_medium_light_charcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $light-charcoal;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_medium_gold{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $gold;
+}
+
+@mixin b4_12px_medium_gold_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $gold;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_medium_cerise{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $cerise;
+}
+
+@mixin b4_12px_medium_cerise_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $cerise;
+  text-transform: uppercase;
+}
+
+@mixin b4_12px_medium_aqua{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $aqua-text;
+}
+
+@mixin b4_12px_medium_aqua_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $aqua-text;
+  text-transform: uppercase;
+}
+
+
+@mixin b4_12px_semibold_caps_charocal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $semibold;
+  color: $charcoal19;
+  text-transform: uppercase;
+}
+
+@mixin b5_10px_montserrat_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 10px;
+  font-weight: $regular;
+  color: $charcoal19;
+}
+
+@mixin b5_10px_montserrat_white{
+  font-family: $font-Montserrat;
+  font-size: 10px;
+  font-weight: $regular;
+  color: $white;
+}
+
+@mixin b5_10px_montserrat_aqua{
+  font-family: $font-Montserrat;
+  font-size: 10px;
+  font-weight: $regular;
+  color: $aqua-text;
+}
+
+@mixin b5_10px_montserrat_charcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 10px;
+  font-weight: $regular;
+  color: $charcoal19;
+  text-transform: uppercase;
+}
+
+@mixin b5_10px_montserrat_light_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 10px;
+  font-weight: $regular;
+  color: $charcoal19;
+}
+
+@mixin b5_10px_semibold_montserrat_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 10px;
+  font-weight: $semibold;
+  color: $charcoal19;
+}
+
+@mixin b6_9px_light_montserrat_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 9px;
+  font-weight: $light;
+  color: $charcoal19;
+}
+
+@mixin b6_9px_montserrat_charcoal{
+  font-family: $font-Montserrat;
+  font-size: 9px;
+  font-weight: $regular;
+  color: $charcoal19;
+}
+
+@mixin error_msg_charcoal{
+  font-family: $font-Lora;
+  font-size: 13px;
+  font-style: italic;
+  color: $charcoal19;
+}
+
+@mixin error_msg_charcoal{
+  font-family: $font-Lora;
+  font-size: 13px;
+  font-style: italic;
+  color: $cerise;
+}
+
+// =================================
+
 @mixin b5_10px_white{
   font-family: $font-Montserrat;
   font-weight: 600;
@@ -746,7 +1155,6 @@ $list: $grey 92%, $white 8%;
   letter-spacing: 0.60px;
 }
 
-//For L1s
 @mixin b3_14px_charcoal{
   font-family: $font-Montserrat;
   font-weight: normal;
@@ -763,7 +1171,6 @@ $list: $grey 92%, $white 8%;
   letter-spacing: 0.30px;
 }
 
-//Base dropdown menu
 @mixin b5_10px_charcoal{
   font-family: $font-Montserrat;
   font-weight: normal;
@@ -883,12 +1290,6 @@ $list: $grey 92%, $white 8%;
   font-weight: normal;
   color: $med-charcoal;
   letter-spacing: 0.3px;
-}
-
-@mixin h1_30px_charcoal{
-  font-family: $font-Lora;
-  font-size: 30px;
-  color: $charcoal19;
 }
 
 @mixin h2_24px_charcoal{
