--- a/src/components/header/templates/styles.scss
+++ b/src/components/header/templates/styles.scss
@@ -20,8 +20,7 @@
         text-transform: capitalize;
         @include b4_12px_charcoal();
             &:hover{
-                font-weight: 600;
-                color: #000
+                font-weight: $medium;
             }
     }
     .block-l2 {
@@ -48,7 +47,7 @@
         line-height: 18px;
         @include b4_12px_charcoal();
         &:hover{
-            font-weight: 600;
+            font-weight: $medium;
         }
     }
     .subheading {
@@ -91,7 +90,7 @@
         line-height: 18px;
         @include b4_12px_charcoal();
         &:hover{
-            font-weight: 600;
+            font-weight: $medium;
         }
     }
     .subheading {
@@ -166,7 +165,8 @@
     }
     .title {
         line-height: 30px;
-        @include b4_12px_semibold_caps_charcoal();
+        @include b4_12px_montserrat_semibold_charcoal();
+        text-transform: uppercase;
     }
     .img {
         width: 50%;
@@ -185,7 +185,7 @@
             border-bottom: none;
             line-height: 18px;
             display: block;
-            @include b4_12px_charcoal();
+            @include b4_12px_montserrat_charcoal();
         }
         .subheading {
             font-size: 11px;
@@ -220,7 +220,8 @@
     .title {
         border-bottom: none;
         line-height: 30px;
-        @include b4_12px_semibold_caps_charcoal();
+        @include b4_12px_montserrat_semibold_charcoal();
+        text-transform: uppercase;
     }
     .img {
         width: 40%;
@@ -240,7 +241,7 @@
             // padding-left: 20px;
             line-height: 18px;
             display: block;
-            @include b4_12px_charcoal();
+            @include b4_12px_montserrat_charcoal();
         }
         .subheading {
             display: none;
@@ -262,7 +263,8 @@
     border-bottom: none;
     // padding-left: 20px;
     line-height: 30px;
-    @include b4_12px_semibold_caps_charcoal();
+    @include b4_12px_montserrat_semibold_charcoal();
+    text-transform: uppercase;
     a {
         color: $med-charcoal;
     }
@@ -297,9 +299,9 @@
     .heading {
         border-bottom: none;
         line-height: 30px;
-        @include b4_12px_charcoal();
+        @include b4_12px_montserrat_charcoal();
         &:hover{
-            font-weight: 600;
+            font-weight: $medium;
         }
     }
     .subheading {
@@ -358,7 +360,7 @@
             // padding-left: 20px;
             line-height: 18px;
             display: block;
-            @include b4_12px_charcoal();
+            @include b4_12px_montserrat_charcoal();
         }
         .subheading {
             display: none;
