--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -828,6 +828,13 @@ $list: $grey 92%, $white 8%;
   color: $charcoal19;
 }
 
+@mixin b3_14px_montserrat_medcharcoal{
+  font-family: $font-Montserrat;
+  font-size: 14px;
+  font-weight: $regular;
+  color: $med-charcoal;
+}
+
 @mixin b3_14px_montserrat_white{
   font-family: $font-Montserrat;
   font-size: 14px;
@@ -935,6 +942,13 @@ $list: $grey 92%, $white 8%;
   font-size: 12px;
   font-weight: $regular;
   color: $charcoal19;
+}
+
+@mixin b4_12px_montserrat_medcharcoal{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $med-charcoal;
 }
 
 @mixin b4_12px_montserrat_white{
