--- a/src/components/Price/styles.scss
+++ b/src/components/Price/styles.scss
@@ -15,7 +15,7 @@
       letter-spacing: 0.5px;
   }
   span {
-    @include b3_14px_med_charcoal();
+    @include b3_14px_montserrat_charcoal();
     text-transform: capitalize;
     letter-spacing: 0.5px;
   }
