--- a/src/components/dropdown/secondaryHeaderDropdown/styles.scss
+++ b/src/components/dropdown/secondaryHeaderDropdown/styles.scss
@@ -9,6 +9,7 @@
         font-family: $font-Montserrat;
         font-size: 12px;
         color: $charcoal19;
+        font-weight: $light;
         line-height: $secondary-header-height;
         height:$secondary-header-height;
         padding: 0px 15px;
