--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -944,6 +944,14 @@ $list: $grey 92%, $white 8%;
   color: $charcoal19;
 }
 
+@mixin b4_12px_montserrat_charcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $regular;
+  color: $charcoal19;
+  text-transform: uppercase;
+}
+
 @mixin b4_12px_montserrat_medcharcoal{
   font-family: $font-Montserrat;
   font-size: 12px;
