--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -392,7 +392,7 @@ input[type="radio"]:checked + label, [type="checkbox"]:not(:checked) + label,
 input[type="checkbox"]:checked + label {
   position: relative;
   cursor: pointer;
-  font-weight: normal;
+  // font-weight: normal;
   font-size: 12px !important;
   font-family: $font-Montserrat;
 }
