--- a/src/containers/careerNew/components/Landing/landing.scss
+++ b/src/containers/careerNew/components/Landing/landing.scss
@@ -67,6 +67,7 @@
                 opacity: 1;
                 margin-top: 5%;
                 padding: 0% 15%;
+                word-break: break-all;
 
                 @media screen and (max-width: 992px) {
                     display: none;
