--- a/src/containers/careerNew/components/Landing/landing.scss
+++ b/src/containers/careerNew/components/Landing/landing.scss
@@ -66,7 +66,7 @@
                 color: $default;
                 opacity: 1;
                 margin-top: 5%;
-                padding: 0% 15%;
+                padding: 0% 20% 0% 18%;
                 word-break: break-all;
 
                 @media screen and (max-width: 992px) {
@@ -77,7 +77,6 @@
                     font: normal normal 300 10px/20px $font-Montserrat;
                     letter-spacing: 0.24px;
                     margin-top: 1%;
-                    padding: 0% 10%;
                     line-height: 1.5;
                 }
             }
