--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -738,31 +738,31 @@ $list: $grey 92%, $white 8%;
 }
 
 @mixin h2_24px_lora_charcoal{
-  font-family: $font-Montserrat;
+  font-family: $font-Lora;
   font-size: 24px;
   color: $charcoal19;
 }
 
 @mixin h2_24px_lora_white{
-  font-family: $font-Montserrat;
+  font-family: $font-Lora;
   font-size: 24px;
   color: $white;
 }
 
 @mixin h3_20px_lora_charcoal{
-  font-family: $font-Montserrat;
+  font-family: $font-Lora;
   font-size: 20px;
   color: $charcoal19;
 }
 
 @mixin h3_20px_lora_white{
-  font-family: $font-Montserrat;
+  font-family: $font-Lora;
   font-size: 20px;
   color: $white;
 }
 
 @mixin h3_20px_lora_gold{
-  font-family: $font-Montserrat;
+  font-family: $font-Lora;
   font-size: 20px;
   color: $gold;
 }
@@ -782,13 +782,13 @@ $list: $grey 92%, $white 8%;
 }
 
 @mixin h6_16px_lora_charcoal{
-  font-family: $font-Montserrat;
+  font-family: $font-Lora;
   font-size: 16px;
   color: $charcoal19;
 }
 
 @mixin h6_16px_lora_white{
-  font-family: $font-Montserrat;
+  font-family: $font-Lora;
   font-size: 16px;
   color: $white;
 }
