--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -393,7 +393,7 @@ input[type="checkbox"]:checked + label {
   position: relative;
   cursor: pointer;
   // font-weight: normal;
-  font-size: 12px !important;
+  font-size: 12px;
   font-family: $font-Montserrat;
 }
 
