--- a/src/containers/pdp/components/wallpaperPopup/styles.scss
+++ b/src/containers/pdp/components/wallpaperPopup/styles.scss
@@ -22,7 +22,7 @@
 }
 
 .title {
-    @include h3_20px_med_charcoal();
+    @include h3_20px_lora_charcoal();
     text-align: center;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .text {
-    @include b4_12px_charcoal();
+    @include b4_12px_montserrat_charcoal_caps();
     margin: 20px 0 30px 0;
     padding: 0px 30px;
     text-align: center;
@@ -67,12 +67,12 @@
     }
     .label{
         text-align: left;
-        @include b4_12px_charcoal();
+        @include b4_12px_montserrat_charcoal_caps();
         text-transform: capitalize;
     }
     .result{
         text-align: left;
-        @include b4_12px_semibold_caps_charcoal();
+        @include b4_12px_montserrat_semibold_charcoal();
         text-transform: capitalize;
     }
 }
