--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -399,9 +399,9 @@ input[type="checkbox"]:checked + label {
 
 @media screen and (max-width: 768px) {
   input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="date"], select {
-    font-size: 16px !important;
+    font-size: 16px;
     @include placeholder {
-      font-size: 16px !important;
+      font-size: 16px;
     }
   }
   input[type="date"] {
