--- a/src/components/ColorSelector/styles.scss
+++ b/src/components/ColorSelector/styles.scss
@@ -6,6 +6,16 @@
   vertical-align: top;
   width: 56px;
   margin-right: 10px;
+  border-radius: 5px;
+  border:1px solid #E5E5E5;
+  &:hover{
+    border:2px solid #618A8A;
+  }
+  &.disabled{
+    pointer-events: none;
+    border:1px solid #E5E5E5 !important;
+  }
+  padding: 2px; 
 }
 
 .text {
@@ -13,4 +23,10 @@
   line-height: 15px;
   text-align: center;
   margin-top: 10px;
+}
+
+.img-responsive{
+  height: auto;
+  width: 100%;
+  border-radius: 5px;
 }
