--- a/src/containers/orderConfirmation/styles.scss
+++ b/src/containers/orderConfirmation/styles.scss
@@ -152,13 +152,14 @@
     text-align: center;
     margin: auto;
     border: 1px solid #ccc;
-    width: 66%;
+    width: 65.8%;
     margin-top: -16px;
     padding: 0px 20px;
     margin-bottom: 30px;
+    border-top: none;
 
     @media screen and (max-width: 767px) {
-        width: 83%;
+        width: 81.5%;
     }
 
     .sub-total-section{
@@ -173,6 +174,7 @@
         display: flex;
         justify-content: space-between;
         padding: 15px 0px;
+        font-size: 14px;
     }
 
 
