Header Footer QA fix

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -273,9 +273,11 @@
       li {
         text-transform: capitalize;
         line-height: 30px;
+        @include b4_12px_montserrat_charcoal();
         a {
           @include b4_12px_montserrat_charcoal();
         }
+        
       }
       span {
         @include b3_14px_montserrat_semibold_charcoal();
