--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -705,3 +705,42 @@
     }
   }
 }
+
+.btnWrp{
+  margin-top: 20px;
+
+  .loadMoreBtn {
+    border: 1px solid #548B8B;
+    text-align: center;
+    font: normal normal medium 12px/20px $font-Montserrat;
+    letter-spacing: 0.36px;
+    color: #548B8B;
+    text-transform: uppercase;
+    opacity: 1;
+    background: $white;
+    padding: 8px 20px;
+
+    &:hover {
+      background-color: #548B8B;
+      color: $white;
+    }
+    
+  }
+
+  .backToTopBtn {
+    text-align: center;
+    font: normal normal normal 12px/20px $font-Montserrat;
+    letter-spacing: 0.36px;
+    color: #191919;
+    text-transform: uppercase;
+    opacity: 1;
+    border: none;
+    background: white;
+    border-bottom: 1px solid;
+
+    &:hover {
+      color: #3C7979;
+    }
+
+  }
+}
