PLP DEstop issues

--- a/src/components/PlpBreadcrumbs/styles.scss
+++ b/src/components/PlpBreadcrumbs/styles.scss
@@ -8,7 +8,7 @@
         line-height: 43px;
         text-decoration: none;
         @include b5_10px_montserrat_charcoal();
-        color: #8C8C8C;
+        color: #19191955;
         &:last-child {
             color: $charcoal19;
         }
