--- a/src/components/plpResultItem/styles.scss
+++ b/src/components/plpResultItem/styles.scss
@@ -59,7 +59,7 @@
     line-height: 20px;
     cursor: pointer;
     p{
-        @include b4_12px_montserrat_charcoal_caps();
+        @include b4_12px_medium_medcharcoal_caps();
         letter-spacing: 1px;
         padding-top: 10px;
     }
@@ -152,7 +152,8 @@
         border-radius: 10px;
         padding: 0 5px;
         text-align: center;
-        li {
+        li {   
+            font-family: $font-Montserrat;
             display: inline;
             padding: 0 10px;
             color: $charcoal19;
@@ -167,7 +168,7 @@
 }
 .outstock {
     background: url('../../images/outofstock-cta.svg') no-repeat;
-    @include b4_12px_montserrat_medcharcoal();
+    @include b4_12px_medium_medcharcoal_caps();
     text-transform: uppercase;
     position: absolute;
     top: 50%;
@@ -180,9 +181,6 @@
     display: flex;
     justify-content: center;
     line-height: 40px;
-    a{
-        color: $charcoal19;
-    }
 }
 
 
