--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1011,6 +1011,14 @@ $list: $grey 92%, $white 8%;
   text-transform: uppercase;
 }
 
+@mixin b4_12px_medium_medcharcoal_caps{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $med-charcoal;
+  text-transform: uppercase;
+}
+
 @mixin b4_12px_medium_white{
   font-family: $font-Montserrat;
   font-size: 12px;
