--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -737,6 +737,14 @@ $list: $grey 92%, $white 8%;
   font-style: italic;
 }
 
+@mixin h1_30px_lora_medium_charcoal{
+  font-family: $font-Lora;
+  font-size: 30px;
+  color: $charcoal19;
+  font-style: italic;
+  font-weight: 500;
+}
+
 @mixin h2_24px_lora_charcoal{
   font-family: $font-Lora;
   font-size: 24px;
