--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -623,65 +623,53 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
     padding: 0px !important;
   }
   label {
-    background-color: $light-bg;
+    background-color: #f9f8f5;
     display: inline-block;
     text-align: center;
     min-width: 40px;
     border-radius: 12px;
-    color: $med-charcoal;
-    font-weight: normal;
-    font-size: 10px;
+    color: #4c4c4c;
+    font-weight: 400;
+    font-size: 12px;
     font-family: $font-Montserrat;
-    margin: 6px;
+    margin: 0 10px 10px 0;
+    padding: 0 5px;
     cursor: pointer;
-    border: 1px solid transparent;
+    border: 1px solid #E5E5E5;
     line-height: 40px;
-    padding: 0 4px;
-    &.size-cat {
-      padding: 0 4px;
-    }
-
+    padding: 0 5px;
+    letter-spacing: 0.36px;
+    position: relative;
+    min-height: 40px;
     &:hover {
-      border: 1px solid $aqua;
-      background-color: white;
-    }
-    &.notavailable-select {
-      background-color:$white;
-      color: $cerise;
-      border: 1px solid $cerise;
-      cursor: pointer !important;
-      text-decoration: line-through;
-    }
-    &.notavailable {
-      color: tint(#000, 70%) !important;
-      text-decoration: line-through;
-      &:hover {
-        background-color: tint(#000,95%);
-
-      }
+      border: 1px solid $aqua-bold;
+      background-color: #f9f8f5;
+      color: $aqua-bold;
+      font-weight: 500;
     }
     &.select_size {
-      border: 1px solid $aqua !important;
-      background-color: white !important;
-      font-weight: bold !important;
-      color: $aqua !important;
+      border: 1px solid $aqua-bold;
+      background-color: white;
+      font-size:12px;
+      color: $aqua-bold;
+      font-weight: 500;
     }
   }
   .disableSize{
-    opacity: 0.5;
-    cursor: not-allowed;
-    &:hover{
-      opacity: 0.5;
-      cursor: not-allowed;
-      border: 1px solid transparent;
-      background: #f2f2f2;
+    color: #E5E5E5;
+    border: #E5E5E5;
+    border-style: solid;
+    border-width: 1px;
+    background: linear-gradient(to left top, #f9f8f5 47.75%, currentColor 50.5%, currentColor 49.5%, #f9f8f5 51.25%);
+    &:hover {
+      border: 1px solid $aqua-bold;
+      background: white;
+      color: $aqua-bold;
+      font-weight: 500;
     }
   }
 }
-.select_size {
-  border: 1px solid #ab1e56 !important;
-  background-color: white !important;
-}
+
 .size-list-bg1 li {
   background-color: #fff;
 }
